@@ -1,0 +1,5 @@
+dgetline_data.o
+dgetline_free.o
+dgetline_get.o
+dgetline_init.o
+dgetline_size.o
