@@ -1,3 +1,5 @@
 sgetline.o
 sgetline_chop.o
+sgetline_data.o
 sgetline_get.o
+sgetline_size.o
