@@ -1,0 +1,6 @@
+#include "sgetline.h"
+
+const char *sgetline_data(const struct sgetline *s)
+{
+  return s->s;
+}
