@@ -1,0 +1,6 @@
+#include "sgetline.h"
+
+unsigned long sgetline_size(const struct sgetline *s)
+{
+  return s->len;
+}
